# ChronoGrapher

./: Cargo.toml
core/: Cargo.toml
core/src/: errors.rs  lib.rs  scheduler.rs  utils.rs
core/src/scheduler/: task_dispatcher.rs
core/src/scheduler/engine/: default.rs
core/src/scheduler/task_dispatcher/: default.rs
core/src/scheduler/task_store/: ephemeral.rs
core/src/task/: frame_builder.rs
core/src/task/dependency/: flag.rs  task.rs
core/src/task/frames/: collectionframe.rs
core/src/task/trigger/schedule/: cron.rs  interval.rs
core/tests/: collectionframe_test.rs  dependency_test.rs  tests.rs
core/tests/dependency_test/: dynamic_dependency_test.rs  flag_resolution_test.rs  logical_combinations_test.rs  mod.rs  task_dependency_test.rs  task_dependency_test_failures_only.rs
docs/content/docs/contributing/: api_docs_guidelines.mdx
proc-core/: Cargo.toml
proc-core/src/: lib.rs
