[package]
name = "chronographer"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
homepage = "https://github.com/GitBrincie212/ChronoGrapher"
authors = ["McBrincie212"]
description = "The core library (acts as a foundation) for the ChronoGrapher scheduling / workflow orchestration platform"
readme = "README.md"
repository = "https://github.com/GitBrincie212/ChronoGrapher"
keywords = ["ChronoGrapher", "scheduler", "scheduling", "workflow", "orchestration"]
categories = ["embedded", "asynchronous"]

[lib]
name = "chronographer"
crate-type = ["rlib"]

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.16"
typed-builder = "0.23.0"
tokio = { version = "1.47.1", features = ["time", "rt-multi-thread", "macros", "sync"] }
uuid = { version = "1.18.1", features = ["v4"] }
fastrand = "2.3.0"
dashmap = { version = "7.0.0-rc2" }
anyhow = { version = "1.0.101" , features = ["std"], optional = true }
eyre = {version = "0.6.12", optional = true}
chrono = { version = "0.4.41", features = ["now"] }

[features]
anyhow = ["dep:anyhow"]
eyre = ["dep:eyre"]
# chrono = ["dep:chrono"]

[[bin]]
name = "chronographer"
path = "src/bin/main.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "test2"
path = "src/bin/test2.rs"